--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "vue": "^3.0.0",
     "vue-lazyload": "^1.3.3",
     "vue-router": "^4.0.0-0",
+    "vue3-carousel": "^0.1.25",
     "vue3-lazyload": "^0.2.2-beta",
     "vuex": "^4.0.0-0"
   },
