--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "vue-router": "^4.0.0-0",
     "vue3-carousel": "^0.1.25",
     "vue3-lazyload": "^0.2.2-beta",
+    "vue3-smooth-scroll": "^0.8.1",
     "vuex": "^4.0.0-0"
   },
   "devDependencies": {
