--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "core-js": "^3.22.2",
+    "firebase": "^9.6.11",
     "register-service-worker": "^1.7.2",
     "vue": "^3.2.33 ",
     "vue-router": "^4.0.14",
