--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "caniuse-lite": "^1.0.30001441",
     "core-js": "^3.26",
     "firebase": "^9.15",
     "register-service-worker": "^1.7",
